designs/general-page-styles.css
  .page__center {
    display: flex;
    justify-content: center;
    background-color: var(--color-white);
    padding-bottom: 2rem;
  }
  .page__view {
    width: 50em;
    margin-right: 2em;
  }
  .page__content {
    padding: 2em;
    background-color: var(--color-white);
    padding-top: 1em;
  }
  .page__name {
    text-align: center;
    margin-left: 2.2em;
    font-size: var(--font-header);
  }
  .page__name-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .page__header {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: var(--color-white);
    margin-bottom: 0px;
    margin-top: 0px;
  }


@media (max-width: 1024px) {
  .page__view {
    width: 100%;
    margin: 0px;
    margin-top: 25vh;
  }
}

